--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>  
                 
                 <div class="output">
-                    <p class="output-text">This Cattle weight is approximately <span id="weight" style="color:red; font-size: 22px;"></span> kg.</p>
+                    <p class="output-text">This Cattle weight is approximately <span id="weight" style="color:red; font-size: 22px;">0</span> kg.</p>
                 </div>
                 
             </div>
